--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,25 +1,9 @@
-/intro.class
-/sumAvg.class
-/simpleInterest.class
-/poundToKg.class
-/area.class
-/Area.class
-/Greetings.class
-/Intro.class
-/PoundToKg.class
-/SimpleInterest.class
-/SumAvg.class
-/perimeters.class
-/Perimeters.class
-/VolumeOfCylinder.class
-/TemperatureConversion.class
-/MathematicalFunction.class
-/swapvalues/
-/Person.class
-/PrintNegetive.class
-/Comparision.class
-/ASCII.class
-/OddEven.class
-/LeapYear.class
-/Largest.class
-/TypesOfTriangle.class
+/Calculator.class
+/DaysOfWeek.class
+/Table.class
+/SumToN.class
+/Factorial.class
+/Student.class
+/Reverse.class
+/SumAndProduct.class
+/Prime.class
