--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,1 @@
-/Calculator.class
-/DaysOfWeek.class
-/Table.class
-/SumToN.class
-/Factorial.class
-/Student.class
-/Reverse.class
-/SumAndProduct.class
-/Prime.class
+/swapvalues/
